<resources>
    <string name="app_name">FileScanner</string>
    <string name="start">start</string>
    <string name="scan_title">Scan your External Directory.</string>
    <string name="stop">stop</string>
    <string name="scan">scan</string>
    <string name="large_files_title">Top 10 large files in External Storage</string>
    <string name="avg_file_size_title">Average File Size : </string>
    <string name="freq_file_ext">5 most frequent File extensions.</string>
    <string name="scan_success">Scan Successfully..!</string>
    <string name="scan_abort">Scan Cancelled...!</string>
    <string name="no_storage">No external Storage found..!</string>
    <string name="app_exit_alert">Scan will stop. Do you really want to exit..?</string>
    <string name="alert">Alert</string>
    <string name="permission_required_explanation">Read permission is required to read the files from your storage.</string>
    <string name="permission_req">Permission Required</string>
    <string name="crash_toast_text">App Crashed</string>
    <string name="top_10_file_size">Top 10 files by size.</string>
    <string name="top_5_ext_freq">Top 5 File Extension with frequency.</string>
    <string name="share">Share</string>
</resources>
